# siggy

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
siggy/: cli.py  templates.py  update.py
siggy/templates/: 202207.html  base.html
